Sidebar collapse Body scrolling fix

--- a/src/_common/styles/layout.less
+++ b/src/_common/styles/layout.less
@@ -1,44 +1,3 @@
-.content {
-
-	@padding-x: @content-padding-x-md;
-	@padding-y: @content-padding-y-md;
-
-	padding: @header-height + @padding-y @padding-x @padding-y @padding-x;
-	min-height: 100vh;	
-
-	@media @lg {
-		@padding-x: @content-padding-x-lg;
-		@padding-y: @content-padding-y-lg;
-
-		padding: @header-height + @padding-y @padding-x @padding-y @padding-x;
-	}
-
-	@media @md {
-		@padding-x: @content-padding-x-md;
-		@padding-y: @content-padding-y-md;
-
-		padding: @header-height + @padding-y @padding-x @padding-y @padding-x;
-	}
-
-	@media @sm {
-		@padding-x: @content-padding-x-sm;
-		@padding-y: @content-padding-y-sm;
-
-		padding: @header-height + @padding-y @padding-x @padding-y @padding-x;
-		// margin-left: calc(100vw - 100%); }
-		// width: 100vw;
-		// width: calc(200vw - 50%);
-	}
-
-	@media @xs {
-		@padding-x: @content-padding-x-xs;
-		@padding-y: @content-padding-y-xs;
-
-		padding: @header-height-xs + @padding-y @padding-x @padding-y @padding-x;
-	}
-}
-
-
 .title-block,
 .panel-title-block {
 	padding-bottom: 15px;
