--- a/src/_main/main.less
+++ b/src/_main/main.less
@@ -17,6 +17,13 @@ body {
 	min-height: 100%;
 	font-family: 'Open Sans', sans-serif;
 	color: @color-text;
+	overflow-x: hidden;
+}
+
+
+.main-wrapper {
+	width: 100%;
+	overflow-x: hidden;
 }
 
 a:focus,
