--- a/src/app/_common/sidebar/sidebar.less
+++ b/src/app/_common/sidebar/sidebar.less
@@ -7,20 +7,6 @@
 	bottom: 0;
 	transition: left 0.3s ease;
 
-	.accelerate();
-
-
-	.sidebar-collapsed > & {
-		@media @xs {
-			left: -@sidebar-width;
-		}
-
-		@media @sm {
-			left: -@sidebar-width;
-		}
-	}
-
-
 	.brand {
 		color: @color-primary;
 		text-align: center;
